src-errormsg/E04-DivisionOnIntegers/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E04-DivisionOnIntegers/Plinth.hs:28:17: error: [GHC-88464]
    Variable not in scope: (/) :: Integer -> t0 -> Integer
   |
28 |   Amount n -> n / 2
   |                 ^
